attempt to fix mobile-scrolling overflow bug

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ nav a {
 /* pixel background */
 
 #pixelated-background {
+    overflow: hidden;
     width: 100%;
     height: 100%;
     background-size: cover;
